// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProgressSteps - Snapshots > matches snapshot for ProgressSteps with custom className 1`] = `
<div
  class="mx-auto w-full flex-col sticky top-0 z-10 mt-1 hidden flex-1 items-center gap-4 bg-background lg:flex custom-progress"
  data-testid="container"
>
  <div
    class="mx-auto w-full flex flex-row items-center gap-0"
    data-testid="container"
  >
    <div
      class="mx-auto w-full flex flex-row items-center"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex h-8 w-8 transform items-center justify-center rounded-full font-bold transition-all duration-500 ease-in-out border border-white bg-transparent text-white"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex items-center justify-center transition-all ease-in-out animate-in duration-500 fade-in zoom-in"
          data-testid="container"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative h-px w-28 overflow-hidden xl:w-40"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 transform bg-white transition-all duration-500 ease-out translate-x-0"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex flex-row items-center"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex h-8 w-8 transform items-center justify-center rounded-full font-bold transition-all duration-500 ease-in-out bg-foreground text-background"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex items-center justify-center transition-all duration-500 ease-in-out"
          data-testid="container"
        >
          2
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative h-px w-28 overflow-hidden xl:w-40"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 transform bg-white transition-all duration-500 ease-out -translate-x-full"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex flex-row items-center"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex h-8 w-8 transform items-center justify-center rounded-full font-bold transition-all duration-500 ease-in-out border text-muted-foreground"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex items-center justify-center transition-all duration-500 ease-in-out"
          data-testid="container"
        >
          3
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative h-px w-28 overflow-hidden xl:w-40"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 transform bg-white transition-all duration-500 ease-out -translate-x-full"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex flex-row items-center"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex h-8 w-8 transform items-center justify-center rounded-full font-bold transition-all duration-500 ease-in-out border text-muted-foreground"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex items-center justify-center transition-all duration-500 ease-in-out"
          data-testid="container"
        >
          4
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressSteps - Snapshots > matches snapshot for ProgressSteps with final step 1`] = `
<div
  class="mx-auto w-full flex-col sticky top-0 z-10 mt-1 hidden flex-1 items-center gap-4 bg-background lg:flex"
  data-testid="container"
>
  <div
    class="mx-auto w-full flex flex-row items-center gap-0"
    data-testid="container"
  >
    <div
      class="mx-auto w-full flex flex-row items-center"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex h-8 w-8 transform items-center justify-center rounded-full font-bold transition-all duration-500 ease-in-out border border-white bg-transparent text-white"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex items-center justify-center transition-all ease-in-out animate-in duration-500 fade-in zoom-in"
          data-testid="container"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative h-px w-28 overflow-hidden xl:w-40"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 transform bg-white transition-all duration-500 ease-out translate-x-0"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex flex-row items-center"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex h-8 w-8 transform items-center justify-center rounded-full font-bold transition-all duration-500 ease-in-out border border-white bg-transparent text-white"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex items-center justify-center transition-all ease-in-out animate-in duration-500 fade-in zoom-in"
          data-testid="container"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative h-px w-28 overflow-hidden xl:w-40"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 transform bg-white transition-all duration-500 ease-out translate-x-0"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex flex-row items-center"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex h-8 w-8 transform items-center justify-center rounded-full font-bold transition-all duration-500 ease-in-out border border-white bg-transparent text-white"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex items-center justify-center transition-all ease-in-out animate-in duration-500 fade-in zoom-in"
          data-testid="container"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative h-px w-28 overflow-hidden xl:w-40"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 transform bg-white transition-all duration-500 ease-out translate-x-0"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex flex-row items-center"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex h-8 w-8 transform items-center justify-center rounded-full font-bold transition-all duration-500 ease-in-out border border-white bg-transparent text-white"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex items-center justify-center transition-all ease-in-out animate-in duration-500 fade-in zoom-in"
          data-testid="container"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative h-px w-28 overflow-hidden xl:w-40"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 transform bg-white transition-all duration-500 ease-out translate-x-0"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex flex-row items-center"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex h-8 w-8 transform items-center justify-center rounded-full font-bold transition-all duration-500 ease-in-out bg-foreground text-background"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex items-center justify-center transition-all duration-500 ease-in-out"
          data-testid="container"
        >
          5
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressSteps - Snapshots > matches snapshot for ProgressSteps with initial step 1`] = `
<div
  class="mx-auto w-full flex-col sticky top-0 z-10 mt-1 hidden flex-1 items-center gap-4 bg-background lg:flex"
  data-testid="container"
>
  <div
    class="mx-auto w-full flex flex-row items-center gap-0"
    data-testid="container"
  >
    <div
      class="mx-auto w-full flex flex-row items-center"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex h-8 w-8 transform items-center justify-center rounded-full font-bold transition-all duration-500 ease-in-out bg-foreground text-background"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex items-center justify-center transition-all duration-500 ease-in-out"
          data-testid="container"
        >
          1
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative h-px w-28 overflow-hidden xl:w-40"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 transform bg-white transition-all duration-500 ease-out -translate-x-full"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex flex-row items-center"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex h-8 w-8 transform items-center justify-center rounded-full font-bold transition-all duration-500 ease-in-out border text-muted-foreground"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex items-center justify-center transition-all duration-500 ease-in-out"
          data-testid="container"
        >
          2
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative h-px w-28 overflow-hidden xl:w-40"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 transform bg-white transition-all duration-500 ease-out -translate-x-full"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex flex-row items-center"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex h-8 w-8 transform items-center justify-center rounded-full font-bold transition-all duration-500 ease-in-out border text-muted-foreground"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex items-center justify-center transition-all duration-500 ease-in-out"
          data-testid="container"
        >
          3
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative h-px w-28 overflow-hidden xl:w-40"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 transform bg-white transition-all duration-500 ease-out -translate-x-full"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex flex-row items-center"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex h-8 w-8 transform items-center justify-center rounded-full font-bold transition-all duration-500 ease-in-out border text-muted-foreground"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex items-center justify-center transition-all duration-500 ease-in-out"
          data-testid="container"
        >
          4
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative h-px w-28 overflow-hidden xl:w-40"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 transform bg-white transition-all duration-500 ease-out -translate-x-full"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex flex-row items-center"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex h-8 w-8 transform items-center justify-center rounded-full font-bold transition-all duration-500 ease-in-out border text-muted-foreground"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex items-center justify-center transition-all duration-500 ease-in-out"
          data-testid="container"
        >
          5
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressSteps - Snapshots > matches snapshot for ProgressSteps with middle step 1`] = `
<div
  class="mx-auto w-full flex-col sticky top-0 z-10 mt-1 hidden flex-1 items-center gap-4 bg-background lg:flex"
  data-testid="container"
>
  <div
    class="mx-auto w-full flex flex-row items-center gap-0"
    data-testid="container"
  >
    <div
      class="mx-auto w-full flex flex-row items-center"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex h-8 w-8 transform items-center justify-center rounded-full font-bold transition-all duration-500 ease-in-out border border-white bg-transparent text-white"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex items-center justify-center transition-all ease-in-out animate-in duration-500 fade-in zoom-in"
          data-testid="container"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative h-px w-28 overflow-hidden xl:w-40"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 transform bg-white transition-all duration-500 ease-out translate-x-0"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex flex-row items-center"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex h-8 w-8 transform items-center justify-center rounded-full font-bold transition-all duration-500 ease-in-out border border-white bg-transparent text-white"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex items-center justify-center transition-all ease-in-out animate-in duration-500 fade-in zoom-in"
          data-testid="container"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative h-px w-28 overflow-hidden xl:w-40"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 transform bg-white transition-all duration-500 ease-out translate-x-0"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex flex-row items-center"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex h-8 w-8 transform items-center justify-center rounded-full font-bold transition-all duration-500 ease-in-out bg-foreground text-background"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex items-center justify-center transition-all duration-500 ease-in-out"
          data-testid="container"
        >
          3
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative h-px w-28 overflow-hidden xl:w-40"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 transform bg-white transition-all duration-500 ease-out -translate-x-full"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex flex-row items-center"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex h-8 w-8 transform items-center justify-center rounded-full font-bold transition-all duration-500 ease-in-out border text-muted-foreground"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex items-center justify-center transition-all duration-500 ease-in-out"
          data-testid="container"
        >
          4
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative h-px w-28 overflow-hidden xl:w-40"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 transform bg-white transition-all duration-500 ease-out -translate-x-full"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex flex-row items-center"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex h-8 w-8 transform items-center justify-center rounded-full font-bold transition-all duration-500 ease-in-out border text-muted-foreground"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex items-center justify-center transition-all duration-500 ease-in-out"
          data-testid="container"
        >
          5
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressSteps - Snapshots > matches snapshot for ProgressSteps with partial steps 1`] = `
<div
  class="mx-auto w-full flex-col sticky top-0 z-10 mt-1 hidden flex-1 items-center gap-4 bg-background lg:flex"
  data-testid="container"
>
  <div
    class="mx-auto w-full flex flex-row items-center gap-0"
    data-testid="container"
  >
    <div
      class="mx-auto w-full flex flex-row items-center"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex h-8 w-8 transform items-center justify-center rounded-full font-bold transition-all duration-500 ease-in-out border border-white bg-transparent text-white"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex items-center justify-center transition-all ease-in-out animate-in duration-500 fade-in zoom-in"
          data-testid="container"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative h-px w-28 overflow-hidden xl:w-40"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 transform bg-white transition-all duration-500 ease-out translate-x-0"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex flex-row items-center"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex h-8 w-8 transform items-center justify-center rounded-full font-bold transition-all duration-500 ease-in-out bg-foreground text-background"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex items-center justify-center transition-all duration-500 ease-in-out"
          data-testid="container"
        >
          2
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative h-px w-28 overflow-hidden xl:w-40"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 transform bg-white transition-all duration-500 ease-out -translate-x-full"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex flex-row items-center"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex h-8 w-8 transform items-center justify-center rounded-full font-bold transition-all duration-500 ease-in-out border text-muted-foreground"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex items-center justify-center transition-all duration-500 ease-in-out"
          data-testid="container"
        >
          3
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative h-px w-28 overflow-hidden xl:w-40"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 transform bg-white transition-all duration-500 ease-out -translate-x-full"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex flex-row items-center"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex h-8 w-8 transform items-center justify-center rounded-full font-bold transition-all duration-500 ease-in-out border text-muted-foreground"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex items-center justify-center transition-all duration-500 ease-in-out"
          data-testid="container"
        >
          4
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative h-px w-28 overflow-hidden xl:w-40"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 transform bg-white transition-all duration-500 ease-out -translate-x-full"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex flex-row items-center"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex h-8 w-8 transform items-center justify-center rounded-full font-bold transition-all duration-500 ease-in-out border text-muted-foreground"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex items-center justify-center transition-all duration-500 ease-in-out"
          data-testid="container"
        >
          5
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressSteps - Snapshots > matches snapshot for ProgressSteps with single step 1`] = `
<div
  class="mx-auto w-full flex-col sticky top-0 z-10 mt-1 hidden flex-1 items-center gap-4 bg-background lg:flex"
  data-testid="container"
>
  <div
    class="mx-auto w-full flex flex-row items-center gap-0"
    data-testid="container"
  >
    <div
      class="mx-auto w-full flex flex-row items-center"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex h-8 w-8 transform items-center justify-center rounded-full font-bold transition-all duration-500 ease-in-out bg-foreground text-background"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex items-center justify-center transition-all duration-500 ease-in-out"
          data-testid="container"
        >
          1
        </div>
      </div>
    </div>
  </div>
</div>
`;
